theme: Fix up dark mode on adsb, sort icons on main, font usage consistency

--- a/http_data/css/dark.css
+++ b/http_data/css/dark.css
@@ -884,7 +884,7 @@ body .ui-tooltip {
 /* Component containers
 ----------------------------------*/
 .ui-widget {
-	font-family: Segoe UI,Arial,sans-serif;
+	xfont-family: Segoe UI,Arial,sans-serif;
 	font-size: 1.1em;
 }
 .ui-widget .ui-widget {
@@ -894,7 +894,7 @@ body .ui-tooltip {
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Segoe UI,Arial,sans-serif;
+	xfont-family: Segoe UI,Arial,sans-serif;
 	font-size: 1em;
 }
 .ui-widget.ui-widget-content {
